--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -8,3 +8,5 @@ dockitems_persist:
 - name: "Visual Studio Code"
   path: "/Applications/Visual Studio Code.app/"
   pos: 1
+
+ansible_python_interpreter: /opt/homebrew/bin/python3
