--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -7,6 +7,13 @@
     #version: "{{ version }}"
   become: false
 
+- name: Create required directories
+  ansible.builtin.file:
+    path: "{{ item }}"
+    state: directory
+    mode: 0700
+  with_items: "{{ directories }}"
+
 - name: Link dotfiles
   file:
     src: "{{ local_repo }}/{{ item.src }}"
